--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -16,7 +16,7 @@ jobs:
        with:
           path: |
                 ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('smoke-tests/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
